--- a/.github/workflows/testcentric-ci.yml
+++ b/.github/workflows/testcentric-ci.yml
@@ -24,7 +24,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 🔧 Install dotnet tools
+          - name: 🛠️ Setup .NET
+          uses: actions/setup-dotnet@v4
+          with:
+            dotnet-version: |
+              3.1.x
+              6.0.x 
+              7.0.x
+              8.0.100
+  
+        - name: 🔧 Install dotnet tools
         run: dotnet tool restore
 
       - name: 🍰 Continuous Integration
